# cimba

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.claude/rules/best-practices/: principles.md
.claude/rules/meta-learning/: README.md  error-handling.md  fastapi-app-structure.md  test-conventions.md
.claude/skills/design-feature/: SKILL.md
.claude/skills/design-feature/assets/templates/: feature-spec.md
.claude/skills/design-feature/references/: requirement-template.md
.claude/skills/implement-feature/: SKILL.md
.claude/skills/implement-feature/references/: implementation-checklist.md  patterns.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post_create.sh
docs/adrs/: 0001-fastapi-server-infrastructure.md  0002-global-error-handling.md  README.md
src/: app.py  conftest.py  lifespan.py  logging.py  main.py  router.py  settings.py
src/features/health/: health_integration_test.py
src/features/simple_chat_agent/: agent.py  context.py
src/features/simple_chat_agent/tools/: context_tools.py
src/shared/errors/: __init__.py  error_response.py  exceptions.py  handlers.py  handlers_unit_test.py
