[project]
name = "cimba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "langgraph>=1.0.9",
    "openai-agents>=0.9.3",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["*_unit_test.py", "*_integration_test.py"]
testpaths = ["src"]
